# bookstore

./: Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  setup-python.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py
order/: admin.py  urls.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: admin.py  urls.py
product/migrations/: 0001_initial.py  0002_alter_category_description.py
product/models/: product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
