[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = ""
authors = ["Rafael Damacena"]

[tool.poetry.dependencies]
python = ">=3.10"
pytest = "^8.3.3"
factory-boy = "^3.3.1"
django = "^5.1.2"
django-rest-framework = "^0.1.0"
faker = "^30.6.0"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.4.6"
psycopg2-binary = "^2.9.10"
flake8 = "^7.1.1"
python-dotenv = {extras = ["cli"], version = "^1.0.1"}
gitpython = "^3.1.43"
whitenoise = "^6.8.2"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
pytest-django = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"